<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_developer"
            app:civ_border_width="2dp"
            app:civ_border_color="#F9FCFC" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="88dp"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/app_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="68dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintHorizontal_bias="0.489"/>
    <TextView
            android:text="@string/app_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="44dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintHorizontal_bias="0.503"/>
    <TextView
            android:text="@string/app_born"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    />
    <TextView
            android:text="@string/app_developer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
</android.support.constraint.ConstraintLayout>